# wyoming-parakeet-mlx

./: .gitignore  LICENSE  NOTICE  README.md  com.wyoming_parakeet_mlx.plist  install_service.sh  pyproject.toml  requirements.txt  uninstall_service.sh  wyoming-parakeet-mlx.sh
script/: run  setup
wyoming_parakeet_mlx/: __init__.py  __main__.py  const.py  handler.py
